Link for Pour en finir avec le Moyen Age.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -55,7 +55,7 @@
       organises a &ldquo;science day&rdquo;. This is an event where researches present
       topics that are not part of the regular curriculum at the university.
       The presentations can also be viewed through a live video stream;
-      the videos recordings are then archived.
+      the video recordings are then archived.
     </p>
 
     <h2>Archived Science Day Videos</h2>
@@ -745,7 +745,7 @@
         <br />
         <span lang="fr">Pernoud, Régine</span>: 
         <i class="booktitle" lang="fr">Pour en finir avec le Moyen Age</i>. [1944] Points, 2014. 
-        <abbr>ISBN</abbr> 978-2757841075.
+        <a href="http://www.seuil.com/ouvrage/pour-en-finir-avec-le-moyen-age-regine-pernoud/9782757841075" hreflang="fr"><abbr>ISBN</abbr> 978-2757841075</a>.
       </li>
       <li>(Potentially relevant: ) Thomas, Keith:
         <i class="booktitle">Religion and the Decline of Magic</i>. Peregrine Books, 1978. 
