Leyla Hunn on Warwick student blog.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -189,6 +189,10 @@
         <a href="https://www.youtube.com/watch?v=QhPk0hRV-D4">interview on <abbr>KPBS</abbr></a> (January 2015).
         <!-- important philosophers: Thomas Nagel on altruism -->
       </li>
+      <li>Leyla Hunn:
+        <a href="http://studentblogs.warwick.ac.uk/philosophy4/entry/can_i_ever/">Can I ever be successful as a Philosophy student?</a>,
+        <i class="blog">Philosophy, University of Warwick</i> (student blog), 24.11.2016.
+      </li>
       <li>The <a href="http://dailynous.com/value-of-philosophy/">Daily Nous Value of Philosophy Pages (<abbr>VPP</abbr>)</a>
         collect resources about the benefits of studying philosophy.
         See also <a href="http://www.whystudyphilosophy.com/">Why Study Philosophy?</a>.
