New section: Reference Works.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -477,6 +477,19 @@
       </li>
     </ul>
 
+    <h3>Reference Works</h3>
+    <ul>
+      <li>
+        <a href="https://plato.stanford.edu/">Stanford Encyclopedia of Philosophy</a>.
+        <br />See also Nikhil Sonnad's article
+        <a href="https://qz.com/480741/this-free-online-encyclopedia-has-achieved-what-wikipedia-can-only-dream-of/">The Stanford Encyclopedia of Philosophy has achieved what Wikipedia can only dream of</a>
+        (<i class="magazine">Quartz</i>, 12 September 2015). 
+        Unfortunately, the article does not correctly represent how Stack Exchange works.
+      </li>
+      <li>
+        <a href="http://www.iep.utm.edu/">Internet Encylopedia of Philosophy: A Peer Reviewed Academic Resource</a>.
+      </li>
+    </ul>
     <!-- 
     <h3>Skills and Methods</h3>
     <p>See also at Continuum: http://www.bloomsbury.com/uk/academic/academic-subjects/philosophy/skills-and-methods-philosophy/ .</p>
