--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1115,6 +1115,35 @@
       </li>
     </ul>
 
+    <h3>Andrew Hoffman about Academic Engagement in Public and Political Discourse</h3>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Andrew_Hoffman">Andrew Hoffman</a>
+        on Wikipedia.
+      </li>
+      <li>Hoffman, Andrew John: 
+        <a href="https://www.researchgate.net/publication/267507840_Academic_Engagement_in_Public_and_Political_Discourse_Establishing_the_Rules_of_the_Game">Academic Engagement in Public and Political Discourse: Establishing the Rules of the Game</a>,
+        <i class="journal">Michigan Journal of Sustainability</i>, Volume 1 (Fall 2013). 
+      </li>
+      <li>Hoffman, Andrew John: 
+        <a href="http://www.tandfonline.com/doi/full/10.1080/14697017.2015.1128168">Reflections: Academia's Emerging Crisis of Relevance and the Consequent Role of the Engaged Scholar</a>,
+        <i class="journal">Journal of Change Management</i>, Volume 16, 2016 - Issue 2: Special Issue on Using Sport and Performance Psychology in the Management of Change (Part 2).
+      </li>
+    </ul>
+
+    <!-- Science Denial:
+      * Climate change denial: https://en.wikipedia.org/wiki/Climate_change_denial 
+      * Klimaskeptizismus: https://de.wikipedia.org/wiki/Klimaskeptizismus 
+      * Skeptical Science (climmate science blog): https://en.wikipedia.org/wiki/Skeptical_Science 
+      * Junk Science: https://en.wikipedia.org/wiki/Junk_science 
+      * Creation–evolution controversy: https://en.wikipedia.org/wiki/Creation%E2%80%93evolution_controversy 
+      * https://de.wikipedia.org/wiki/Achim_Brunnengr%C3%A4ber 
+      * Chris Mooney: The Republican War on Science. Basic Books, 2006. https://www.amazon.de/Republican-War-Science-Chris-Mooney/dp/0465046762/ 
+      * David Michaels: Doubt is Their Product: How Industry's Assault on Science Threatens Your Health. 2008: https://en.wikipedia.org/wiki/Doubt_Is_Their_Product. 
+      * Naomi Oreskes, Erik M. Conway: Merchants of Doubt: How a Handful of Scientists Obscured the Truth on Issues from Tobacco Smoke to Global Warming. 2010: https://en.wikipedia.org/wiki/Merchants_of_Doubt 
+      * Haydn Washington and John Cook: Climate Change Denial: Heads in the Sand. 2011: https://en.wikipedia.org/wiki/Climate_Change_Denial:_Heads_in_the_Sand 
+      * Martin Lack: THE DENIAL OF SCIENCE: Analysing climate change scepticism in the UK. AuthorHouseUK, 2013: https://www.amazon.de/DENIAL-SCIENCE-Analysing-climate-scepticism/dp/1481783971/ [some negative reviews]
+    -->
     <!-- Grimm: KHM: 
       * Christian Staas: "Gebrüder Grimm: Weder deutsch noch Volk" [Ein Gespräch mit dem Germanisten Heinz Rölleke über die wahre Herkunft der Grimmschen Märchen], Die Zeit, 6. Dezember 2012: http://www.zeit.de/2012/50/Brueder-Grimm-Maerchen-Roelleke
       * Heinz Rölleke, Hrsg: Kinder- und Hausmärchen: Die handschriftliche Urfassung von 1810 (Reclams Universal-Bibliothek). Stuttgart: Reclam, 2007. 
