--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1131,6 +1131,23 @@
       </li>
     </ul>
 
+    <h3>Science Denial</h3>
+    <ul>
+      <li>RationalWiki: 
+        <a href="http://rationalwiki.org/wiki/A_comparative_guide_to_science_denial">A comparative guide to science denial</a>.
+      </li>
+      <li>RationalWiki: 
+        <a href="http://rationalwiki.org/wiki/Point_refuted_a_thousand_times">Point refuted a thousand times (<abbr>PRATT</abbr>)</a>.
+      </li>
+      <li>Liu, Dennis W. C.: 
+        <a href="http://europepmc.org/articles/PMC3366896">Science Denial and the Science Classroom</a>. American Society for Cell Biology.
+        <i class="journal">CBE—Life Sciences Education</i>, 2012 Summer; 11(2): 129–134. 
+      </li>
+      <li>Cook, John: 
+        <a href="https://phys.org/news/2015-04-inoculating-science-denial.html">Inoculating against science denial</a>,
+        <i class="website">Phys.org</i>, 27.04.2015.
+      </li>
+    </ul>
     <!-- Science Denial:
       * Climate change denial: https://en.wikipedia.org/wiki/Climate_change_denial 
       * Klimaskeptizismus: https://de.wikipedia.org/wiki/Klimaskeptizismus 
@@ -1144,6 +1161,7 @@
       * Haydn Washington and John Cook: Climate Change Denial: Heads in the Sand. 2011: https://en.wikipedia.org/wiki/Climate_Change_Denial:_Heads_in_the_Sand 
       * Martin Lack: THE DENIAL OF SCIENCE: Analysing climate change scepticism in the UK. AuthorHouseUK, 2013: https://www.amazon.de/DENIAL-SCIENCE-Analysing-climate-scepticism/dp/1481783971/ [some negative reviews]
     -->
+
     <!-- Grimm: KHM: 
       * Christian Staas: "Gebrüder Grimm: Weder deutsch noch Volk" [Ein Gespräch mit dem Germanisten Heinz Rölleke über die wahre Herkunft der Grimmschen Märchen], Die Zeit, 6. Dezember 2012: http://www.zeit.de/2012/50/Brueder-Grimm-Maerchen-Roelleke
       * Heinz Rölleke, Hrsg: Kinder- und Hausmärchen: Die handschriftliche Urfassung von 1810 (Reclams Universal-Bibliothek). Stuttgart: Reclam, 2007. 
