+ Bengal Famine of 1943.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -827,6 +827,11 @@
       </li>
     </ul>
 
+    <h4>Bengal Famine of 1943</h4>
+    <p>Probably not well-known today. See
+      <a href="https://en.wikipedia.org/wiki/Bengal_famine_of_1943">Bengal famine of 1943</a> on Wikipedia.
+    </p>
+
     <h4>Thor Heyerdahl</h4>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Thor_Heyerdahl">Thor Heyerdahl</a>.</li>
