--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -89,6 +89,9 @@
         <a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day">9th Science Day</a>,
         20 January 2017.
       </li>
+      <li>
+        10th Science Day, 2 June 2017 (preliminary date).
+      </li>
     </ul>
 
     <h2>Science Day Topics</h2>
@@ -1020,7 +1023,7 @@
       </li>
       -->
     </ul>
-    
+
     <h3>Other Topics</h3>
     <ul>
       <li><span lang="de">Carl Friedrich von Weizsäcker</span> as philosopher.
