--- a/science/index.html
+++ b/science/index.html
@@ -589,6 +589,12 @@
         by the interests of reviewers. The author does not try to prove that this
         applies to all domains of science.
       </li>
+      <li>
+        <a href="http://retractionwatch.com/">Retraction Watch</a>:
+        a blog that publishes mostly articles about research papers that have beeen retracted, 
+        for example because they cannot be replicated, because data are missing or have been faked
+        or other serious flaws.
+      </li>
     </ul>
     <!-- Publication bias:
       * Bite Size Psych: "Is the number 1 fact about willpower wrong?": https://www.youtube.com/watch?v=gnSBnQo9-UM 
