--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -37,7 +37,7 @@
           </li>
           <li class="active"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
           <li><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
-          <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
+          <!--li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a-->
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
