+ Naomi Klein: The Shock Doctrine.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1093,6 +1093,17 @@
       -->
     </ul>
 
+
+    <h2>Politics and Economy</h2>
+    <ul>
+      <li>Klein, Naomi:
+        <i class="booktitle">The Shock Doctrine: The Rise of Disaster Capitalism</i>.
+        [Metropolitan Books, Henry Holt and Company, 2007]. Penguin Books, 2008.
+        <abbr>ISBN</abbr> 978-0-141-02453-0.
+      </li>
+    </ul>
+
+
     <h2>Science in Society</h2>
     <ul>
       <li>European Commission, Directorate-General for Research and Innovation:
