Books cited in The Shock Doctrine.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1100,6 +1100,68 @@
         <i class="booktitle">The Shock Doctrine: The Rise of Disaster Capitalism</i>.
         [Metropolitan Books, Henry Holt and Company, 2007]. Penguin Books, 2008.
         <abbr>ISBN</abbr> 978-0-141-02453-0.
+        <br />See also: 
+        <ul>
+          <li><a href="https://en.wikipedia.org/wiki/Donald_Ewen_Cameron">Donald Ewen Cameron</a>:
+            some of this research took place in the context of the 
+            <a href="https://en.wikipedia.org/wiki/Project_MKUltra">Project MKUltra</a> mind control program,
+            which was covertly sponsored by the <abbr title="Central Intelligence Agency">CIA</abbr>.
+            <!-- also wrote The Social Reorganization of Germany, in which he claimed "German culture and its people would have offspring bound to become a threat to world peace in 30 years" (Wikipedia). -->
+          </li>
+          <li>Friedman, Milton:
+            <i class="booktitle">Capitalism and Freedom</i>. 1962.
+          </li>
+          <li>Friedman, Milton; Friedman, Rose D.:
+            <i class="booktitle">Two Lucky People: Memoirs</i>. 1998.
+          </li>
+          <li>Galeano, Eduardo:
+            <i class="booktitle">Days and Nights of Love and War</i>. 1983.
+            <!-- @@original title and year -->
+          </li>
+          <li>Hayek, Friedrich A.:
+            <i class="booktitle">The Road to Serfdom</i>. 1944. 
+          </li>
+          <li>Keynes, John Maynard:
+            <i class="booktitle">The End of Laissez-Faire</i>. 1926. 
+            <i class="booktitle">The Economic Consequences of Peace</i>. 1919.
+            (And other books.)
+          </li>
+          <li>Gunder Frank, André:
+            <i class="booktitle">Economic Genocide in Chile: Monetarist Theory Versus Humanity</i>. 
+            Nottingham, <abbr>UK</abbr>: Spokesman Books, 1976.
+          </li>
+          <li>Feitlowitz, Marguerite:
+            <i class="booktitle">A Lexicon of Terror: Argentina and the Legacies of Torture</i>. New York: Oxford University Press, 1998.
+          </li>
+          <li>Williamson, John, ed.:
+            <i class="booktitle">The Political Economy of Policy Reform</i>.
+            Washington <abbr>D.C.</abbr>: Institute for International Economics, 1994.
+          </li>
+          <li>Conaghan, Catherine M.; Malloy, James M.:
+            <i class="booktitle">Unsettling Statecraft: Democracy and Neoliberalism in the Central Andes</i>. Pittsburgh, <abbr>PA</abbr>: Universit of Pittsburgh Press, 1994.
+          </li>
+          <li>Stiglitz, Joseph E.:
+            <i class="booktitle">Globalization and its Discontents</i>. New York: W. W. Norton &amp; Company, 2002.
+          </li>
+          <li>Fewsmith, Joseph:
+            <i class="booktitle">China Since Tiananmen: The Politics of Transition</i>. Cambridge: Cambrdige University Press, 2001.
+          </li>
+          <li>Wang, Hui:
+            <i class="booktitle">China's New Order: Society, Politics and Economy in Transition</i>. Cambridge, <abbr>MA</abbr>: Harvard University Press, 2003.
+          </li>
+          <li>Gumede, William Mervin:
+            <i class="booktitle">Thabo Mbeki and the Battle for the Soul of the <abbr>ANC</abbr></i>. Cape Town: Zebra Press, 2005.
+          </li>
+          <li>Klein, Lawrence R.; Pomer, Marshall:
+            <i class="booktitle">The New Russia: Transition Gone Awry</i>. Stanford: Stanford University Press, 2001.
+          </li>
+          <li>Reddaway, Peter; Glinski, Dmitri:
+            <i class="booktitle">The Tragedy of Russia's Reforms: Market Bolshevism against Democracy</i>. Washington, <abbr>D.C.</abbr>: United States Institute for Peace Press, 2001.
+          </li>
+          <li>Freeland, Chrystia:
+            <i class="booktitle">Sale of the Century: Russia's Wild Ride from Communism to Capitalism</i>. New York: Crown, 2000.
+          </li>
+        </ul>
       </li>
     </ul>
 
