Budhho's book, cited by N. Klein.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1161,6 +1161,9 @@
           <li>Freeland, Chrystia:
             <i class="booktitle">Sale of the Century: Russia's Wild Ride from Communism to Capitalism</i>. New York: Crown, 2000.
           </li>
+          <li>Budhoo, Davison L.:
+            <i class="booktitle">Enough Is Enough: Dear Mr. Camdessus &hellip; Open Letter of Resignation to the Managing Director of the International Monetary Fund</i>. New York: New Horizons Press, 1990.
+          </li>
         </ul>
       </li>
     </ul>
