New titles + ISBN numbers.

--- a/lijst.html
+++ b/lijst.html
@@ -52,23 +52,26 @@
   <ul>
     <li>Booth, Wayne C.; Colomb, Gregory C.; Williams, Joseph M.: 
       <i class="booktitle">The Craft of Research</i>.
-      3rd edition. University of Chicago Press, 2008.
-      <abbr>ISBN</abbr> 978 02 26 06 56 63. (? 18 €)
+      4th edition. University of Chicago Press, 2016.
+      <a href="http://press.uchicago.edu/ucp/books/book/chicago/C/bo23521678.html"><abbr>ISBN</abbr> 9780226239736</a>.
+      (3rd edition. University of Chicago Press, 2008.
+      <abbr>ISBN</abbr> 978 02 26 06 56 63. (? 18 €))
     </li>
-    <li>Polanyi, Karl: <i class="booktitle">The Great Transformation</i>. 
-      <!-- <abbr>ISBN</abbr> -->
+    <li>Polanyi, Karl: <i class="booktitle">The Great Transformation: The Political and Economic Origins of Our Time</i>. 
+      Beacon Press, 2001.
+      <a href="http://www.beacon.org/The-Great-Transformation-P46.aspx"><abbr>ISBN</abbr> 978-080705643-1</a>.
     </li>
     <li>Weston, Anthony: <i class="booktitle">A Rulebook for Arguments</i>.
       4th edition. Hackett Publishing, 2008.
-      <abbr>ISBN</abbr> 978-0-87220-954-1. (? 12 €)
+      <a href="https://www.hackettpublishing.com/a-rulebook-for-arguments"><abbr>ISBN</abbr> 978-0-87220-954-1</a>. (? 12 €)
     </li>
     <li>Keynes, John Maynard: <i class="booktitle">The Essential Keynes</i>.
-      Edited by Robert Skidelsky. Penguin 2015. (592 pages)
-      <!-- <abbr>ISBN</abbr> -->
+      Edited by Robert Skidelsky. Penguin Classics. Penguin 2016. (592 pages)
+      <a href="http://www.penguinrandomhouse.com/books/317960/the-essential-keynes-by-john-maynard-keynes-edited-and-with-an-introduction-and-commentary-by-robert-skidelsky/"><abbr>ISBN</abbr>  9781846148132</a>.
     </li>
     <li>Skidelsky, Robert: <i class="booktitle">John Maynard Keynes: 1883-1946: Economost, Philosopher, Statesman</i>.
-      Penguin, 2013. (1056 pages)
-      <!-- <abbr>ISBN</abbr> -->
+      Penguin, 2005, 2013. (1056 pages)
+      <a href="http://www.penguinrandomhouse.com/books/321570/john-maynard-keynes-by-robert-skidelsky/"><abbr>ISBN</abbr> 9780143036159</a>.
     </li>
     <li>Varoufakis, Yanis: <i class="booktitle">The Global Minotaur</i>.
       Zed Books, 2011. 2nd edition, 2015.
@@ -80,7 +83,13 @@
     </li>
     <li lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
       Flammarion, 2017.
-      <!-- <abbr>ISBN</abbr> -->
+      <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=50454&levelCode=home"><abbr>ISBN</abbr> 9782081395602</a>.
+    </li>
+    <li lang="fr">Zucman, Gabriel: <i class="booktitle">La Richesse cachée des nations. Enquête sur les paradis fiscaux</i>.
+      Seuil, 2013. (128 pages)
+      <a href="http://www.seuil.com/ouvrage/la-richesse-cachee-des-nations-gabriel-zucman/9782021114317"><abbr>ISBN</abbr> 9782021114317</a>.
+      <span lang="en">(<a href="http://gabriel-zucman.eu/richesse-cachee/" hreflang="fr">Author's website</a>.)</span>
+    </li>
     <li lang="nl">Beeckman, Tinneke: <i class="booktitle">Door Spinoza's lens</i>.
       Kalmthout: Pelckmans, 2012.
       <abbr>ISBN</abbr> 978-90-289-6834-9.
@@ -112,9 +121,9 @@
     <li>Feyerabend, Paul: <i class="booktitle">Against Method</i>. Verso, 2010.
       <abbr>ISBN</abbr>978-1844674428. (? 20 €)
     </li>
-    <li>Giere, Ronald N.: <i class="booktitle">Explaining Science: A Cognitive Approach</i>.
-      University of Chicago Press, 1990.
-      <abbr>ISBN</abbr> 978 02 26 29 20 69. (? 20 €)
+    <li>Giere, Ronald N.: <i class="booktitle">Explaining Science: A Cognitive Approach</i>. [1988]
+      University of Chicago Press, 1990. (344 pages)
+      <a href="http://press.uchicago.edu/ucp/books/book/chicago/E/bo3622319.html"><abbr>ISBN</abbr> 978 02 26 29 20 69</a>. (? 20 €)
     </li>
     <li>Goodman, Nelson: <i class="booktitle">Fact, Fiction, and Forecast</i>.
       Harvard University Press, 1983. 
@@ -128,9 +137,9 @@
       Penguin, 2014. 
       <abbr>ISBN</abbr> 978-0141394534. (? 19 €)
     </li>
-    <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science</i>. 
-      University of Chicago Press, 2008.
-      <abbr>ISBN</abbr> 9780226482057. (? 21 €)
+    <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: </i>. 
+      2nd edition. University of Chicago Press, 2008. (480 pages)
+      <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo5550077.html"><abbr>ISBN</abbr> 9780226482057</a>. (? 21 €)
     </li>
     <li>Locke, John: <i class="booktitle">An Essay concerning Human Understanding</i>. 
       Edited by Pauline Phemister. Oxford University Press, 2008.
@@ -187,6 +196,9 @@
       <abbr>ISBN</abbr> 978-03 75 75 03 66. (? 18 €)
     </li>
     <!-- 
+    <li> : <i class="booktitle"></i>. 
+      <a href=""><abbr>ISBN</abbr> </a>.
+    </li>
     <li> : <i class="booktitle"></i>. 
       <abbr>ISBN</abbr> 
     </li>
