Leviathan; Saporta; ISBN numbers.

--- a/lijst.html
+++ b/lijst.html
@@ -115,8 +115,8 @@
       <abbr>ISBN</abbr> 978 06 84 82 47 10. (? 17 €)
     </li>
     <li>Dennett, Daniel C.: <i class="booktitle">Breaking the Spell: Religion as a Natural Phenomenon</i>. 
-      Penguin, 2007.
-      <abbr>ISBN</abbr> 978-0143038337. (? 18 €)
+      Penguin, 2007. (464 pages)
+      <a href="http://www.penguinrandomhouse.com/books/294244/breaking-the-spell-by-daniel-c-dennett/"><abbr>ISBN</abbr> 978-0143038337</a>. (? 18 €)
     </li>
     <li>Feyerabend, Paul: <i class="booktitle">Against Method</i>. Verso, 2010.
       <abbr>ISBN</abbr>978-1844674428. (? 20 €)
@@ -134,8 +134,9 @@
       <abbr>ISBN</abbr> 978-0-19-875248-6. (? 25 €)
     </li>
     <li>Koestler, Arthur: <i class="booktitle">The Sleepwalkers: A History of Man's Changing Vision of the Universe</i>. 
-      Penguin, 2014. 
-      <abbr>ISBN</abbr> 978-0141394534. (? 19 €)
+      Penguin, 1990, 2014. (624 pages)
+      <abbr>ISBN</abbr> 978-0141394534 / 
+      <a href="http://www.penguinrandomhouse.com/books/274204/the-sleepwalkers-by-arthur-koestler/"><abbr>ISBN</abbr> 978-0140192469</a>. (? 19 €)
     </li>
     <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: </i>. 
       2nd edition. University of Chicago Press, 2008. (480 pages)
@@ -191,9 +192,18 @@
       <abbr>ISBN</abbr> 
     </li>
     -->
+    <li>Hobbes, Thomas: <i class="booktitle">Leviathan. With selected variants from the Latin edition of 1668</i>.
+      Edited, with Introduction, by Edwin Curley. Hackett Publishing, 1994. (627 pages)
+      <a href="https://www.hackettpublishing.com/leviathan"><abbr>ISBN</abbr> 978-0-87220-177-4</a>.
+    </li>
+    <li lang="fr">Saporta, Isabelle: <i class="booktitle">Le livre noir de l'agriculture</i>.
+      Fayard, 2011. (252 pages)
+      <a href="http://www.fayard.fr/le-livre-noir-de-lagriculture-9782213656038"><abbr>ISBN</abbr> 9782213656038</a>.
+      <!-- reprint Pluriel, 2012: http://www.fayard.fr/le-livre-noir-de-lagriculture-9782818502242  -->
+    </li>
     <li>Magee, Bryan: <i class="booktitle">Confessions of a Philosopher: A Personal Journey Through Western Philosophy from Plato to Popper</i>.
       Modern Library, 1999.
-      <abbr>ISBN</abbr> 978-03 75 75 03 66. (? 18 €)
+      <a href="http://www.penguinrandomhouse.com/books/106036/confessions-of-a-philosopher-by-bryan-magee/"><abbr>ISBN</abbr> 978-03 75 75 03 66</a>. (? 18 €)
     </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
