Horvath, Lodge, Hattie; ISBN numbers OUP.

--- a/lijst.html
+++ b/lijst.html
@@ -130,8 +130,8 @@
       <abbr>ISBN</abbr> 978 06 74 29 07 16. (? 18 €)
     </li>
     <li>Hume, David: <i class="booktitle">An Enquiry concerning Human Understanding</i>.
-      Edited by Tom L. Beauchamp. Oxford University Press, 1999.
-      <abbr>ISBN</abbr> 978-0-19-875248-6. (? 25 €)
+      Edited by Tom L. Beauchamp. Oxford University Press, 1999. (304 pages)
+      <a href="https://global.oup.com/academic/product/an-enquiry-concerning-human-understanding-9780198752486"><abbr>ISBN</abbr> 978-0-19-875248-6</a>. (? 25 €)
     </li>
     <li>Koestler, Arthur: <i class="booktitle">The Sleepwalkers: A History of Man's Changing Vision of the Universe</i>. 
       Penguin, 1990, 2014. (624 pages)
@@ -143,8 +143,8 @@
       <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo5550077.html"><abbr>ISBN</abbr> 9780226482057</a>. (? 21 €)
     </li>
     <li>Locke, John: <i class="booktitle">An Essay concerning Human Understanding</i>. 
-      Edited by Pauline Phemister. Oxford University Press, 2008.
-      <abbr>ISBN</abbr> 978-0-19-929662-0. (? 16 €)
+      Edited by Pauline Phemister. Oxford University Press, 2008. (576 pages)
+      <a href="https://global.oup.com/academic/product/an-essay-concerning-human-understanding-9780199296620"><abbr>ISBN</abbr> 978-0-19-929662-0</a>. (? 16 €)
     </li>
     <li>Medawar, Peter: <i class="booktitle">Advice To A Young Scientist</i>.
       Alfred P. Sloan Foundation Series. Basic Books [Perseus Books Group], 1981.
@@ -164,8 +164,8 @@
       <abbr>ISBN</abbr> 978-0-415-28594-0. (? 21 €)
     </li>
     <li>Papineau, David: <i class="booktitle">Philosophical Devices: Proofs, Probabilities, Possibilities, and Sets</i>.
-      Oxford University Press, 2012.
-      <abbr>ISBN</abbr> 978-0-19-965173-3. (? 19 €)
+      Oxford University Press, 2012. (224 pages)
+      <a href="https://global.oup.com/academic/product/philosophical-devices-9780199651733"><abbr>ISBN</abbr> 978-0-19-965173-3</a>. (? 19 €)
     </li>
     <li lang="fr">Prigogine, Ilya; Stengers, Isabelle: <i class="booktitle">La Nouvelle Alliance: Métamorphose de la science</i>.
       Folio Essais. Folio, 1986.
@@ -195,6 +195,10 @@
     <li>Hobbes, Thomas: <i class="booktitle">Leviathan. With selected variants from the Latin edition of 1668</i>.
       Edited, with Introduction, by Edwin Curley. Hackett Publishing, 1994. (627 pages)
       <a href="https://www.hackettpublishing.com/leviathan"><abbr>ISBN</abbr> 978-0-87220-177-4</a>.
+    </li>
+    <li>Horvath, Jared Cooney; Lodge, Jason M.; Hattie, John: <i class="booktitle">From the Laboratory to the Classroom: Translating Science of Learning for Teachers</i>.
+      Routledge, 2017. (312 pages)
+      <a href="https://www.routledge.com/From-the-Laboratory-to-the-Classroom-Translating-Science-of-Learning-for/Horvath-Lodge-Hattie/p/book/9781138649644"><abbr>ISBN</abbr> 9781138649644</a>.
     </li>
     <li lang="fr">Saporta, Isabelle: <i class="booktitle">Le livre noir de l'agriculture</i>.
       Fayard, 2011. (252 pages)
