Publisher info Popper and Russell.

--- a/lijst.html
+++ b/lijst.html
@@ -160,8 +160,8 @@
       <abbr>ISBN</abbr> 978 05 21 70 84 18. (? 24 €)
     </li>
     <li>Popper, Karl: <i class="booktitle">Conjectures and Refutations: The Growth of Scientific Knowledge</i>.
-      2nd Edition. Routledge, 2002.
-      <abbr>ISBN</abbr> 978-0-415-28594-0. (? 21 €)
+      2nd edition. Routledge, 2002. (608 pages)
+      <a href="https://www.routledge.com/Conjectures-and-Refutations-The-Growth-of-Scientific-Knowledge/Popper/p/book/9780415285940"><abbr>ISBN</abbr> 978-0-415-28594-0</a>. (? 21 €)
     </li>
     <li>Papineau, David: <i class="booktitle">Philosophical Devices: Proofs, Probabilities, Possibilities, and Sets</i>.
       Oxford University Press, 2012. (224 pages)
@@ -172,20 +172,20 @@
       <abbr>ISBN</abbr> 978 20 70 32 32 41. (? 12 €)
     </li>
     <li>Russell, Bertrand: <i class="booktitle">The Scientific Outlook</i>.
-      Routledge, 2009.
-      <abbr>ISBN</abbr> 978-0-415-47462-7. (? 20 €)
+      Routledge, 2009. (240 pages)
+      <a href="https://www.routledge.com/The-Scientific-Outlook/Russell/p/book/9780415474627"><abbr>ISBN</abbr> 978-0-415-47462-7</a>. (? 20 €)
     </li>
     <li>Russell, Bertrand: <i class="booktitle">Human Knowledge: Its Scope and Limits</i>.
-      Routledge, 2009.
-      <abbr>ISBN</abbr> 978-0-415-47444-3. (? 23 €)
+      Routledge, 2009. (464 pages)
+      <a href="https://www.routledge.com/Human-Knowledge-Its-Scope-and-Limits/Russell/p/book/9780415474443"><abbr>ISBN</abbr> 978-0-415-47444-3</a>. (? 23 €)
     </li>
     <li>Russell, Bertrand: <i class="booktitle">Our Knowledge of the External World: As a Field for Scientific Method in Philosophy</i>.
-      Routledge, 2009.
-      <abbr>ISBN</abbr> 978-0-415-47377-4. (? 21 €)
+      Routledge, 2009. (214 pages)
+      <a href="https://www.routledge.com/Our-Knowledge-of-the-External-World/Russell/p/book/9780415473774"><abbr>ISBN</abbr> 978-0-415-47377-4</a>. (? 21 €)
     </li>
     <li>Russell, Bertrand: <i class="booktitle">Sceptical Essays</i>.
-      2nd Edition. Routledge, 2004.
-      <abbr>ISBN</abbr> 978-0-415-32508-0. (? 22 €)
+      2nd Edition. Routledge, 2009. (240 pages)
+      <a href="https://www.routledge.com/Sceptical-Essays/Russell/p/book/9780415325080"><abbr>ISBN</abbr> 978-0-415-32508-0</a>. (? 22 €)
     </li>
     <!-- 
     <li>Russell, Bertrand: <i class="booktitle"></i>. 
