Deportation of Mexicans 1930s.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -830,6 +830,19 @@
       </li>
     </ul>
 
+    <h4>Deportation of Mexicans from the <abbr>USA</abbr> in the 1930s</h4>
+    <ul>
+      <li>Balderrama, Francisco E.; Rodriguez, Raymond:
+        <i class="booktitle">Decade of Betrayal: Mexican Repatriation in the 1930s</i>.
+        Revised edition. University of New Mexico Press, 2006.
+        <a href="http://unmpress.com/books.php?ID=11111622461423"><abbr>ISBN</abbr> 978-0-8263-3973-7</a>.
+      </li>
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=g9V7QDgW9mo">"Decade of Betrayal": How the <abbr>U.S.</abbr> Expelled Over a Half Million U.S. Citizens to Mexico in 1930s</a>,
+        (YouTube, 28 February 2017): interview with Balderrama.
+      </li>
+    </ul>
+
     <h4>Bengal Famine of 1943</h4>
     <p>Probably not well-known today. See
       <a href="https://en.wikipedia.org/wiki/Bengal_famine_of_1943">Bengal famine of 1943</a> on Wikipedia.
@@ -1230,6 +1243,16 @@
       <li>Cook, John: 
         <a href="https://phys.org/news/2015-04-inoculating-science-denial.html">Inoculating against science denial</a>,
         <i class="website">Phys.org</i>, 27.04.2015.
+      </li>
+      <li>The Jimmy Dore Show:
+        <a href="https://www.youtube.com/watch?v=FsuqtWHkY2Q">Science Denying Politician Humiliated By Girls Question About Science</a>
+        (8 minutes, YouTube, 15.02.2017). 
+        At a town hall meeting, <a href="https://en.wikipedia.org/wiki/Jason_Chaffetz">Jason Chaffetz</a>, 
+        who is a republican and a Mormon, is confronted by a ten-year old girl with a question about water pollution.
+        Chaffetz dodges the question by saying, <q>I don't pretend to have all the answers to all the questions</q>.
+        He admits that what gets thrown into the air and the water has an effect on the enviroment,
+        then adds he has a &dlquo;different approach to being responsible for the environment&rdquo; than
+        citizens who are worried about pollution.
       </li>
     </ul>
     <!-- Science Denial:
