--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1039,6 +1039,85 @@
 
     <h3>Other Topics</h3>
     <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Gregory_Bateson">Gregory Bateson</a> (1904 &ndash; 1980),
+        <q>anthropologist, social scientist, linguist, visual anthropologist, semiotician, and cyberneticist</q>.
+        <ul>
+          <li>Bateson, Gregory:
+            <i class="booktitle">Naven: A Survey of the Problems suggested by a Composite Picture of the Culture of a New Guinea Tribe drawn from Three Points of View</i>.
+            Stanford University Press, 1958.
+            <a href="http://www.sup.org/books/title/?id=2436"><abbr>ISBN</abbr> 9780804705202</a>.
+          </li>
+          <li>Bateson, Gregory:
+            <i class="booktitle">Steps to an Ecology of Mind: Collected Essays in Anthropology, Psychiatry, Evolution, and Epistemology</i>.
+            University of Chicago Press, 1972, 1999.
+            <a href="http://press.uchicago.edu/ucp/books/book/chicago/S/bo3620295.html"><abbr>ISBN</abbr> 9780226039053</a>.
+          </li>
+          <li>Bateson, Gregory:
+            <i class="booktitle">Mind and Nature: A Necessary Unity</i>.
+            [Dutton, 1979; Bantam, 1988] Hampton Press, 2002.
+            <a href="http://www.hamptonpress.com/Merchant2/merchant.mvc?Screen=PROD&Product_Code=1-57273-434-5&Category_Code="><abbr>ISBN</abbr> 1-57273-434-5</a>.
+          </li>
+          <li>Bateson, Gregory; Bateson, Mary Catherine:
+            <i class="booktitle">Angels Fear: Towards an Epistemology of the Sacred</i>.
+            [2nd edition, Bantam, 1988] Hampton Press, 2005.
+            <a href="http://www.hamptonpress.com/Merchant2/merchant.mvc?Screen=PROD&Product_Code=1-57273-594-5&Category_Code="><abbr>ISBN</abbr> 1-57273-594-5</a>.
+          </li>
+          <li>Brockman, John:
+            <a href="https://www.edge.org/conversation/john_brockman-gregory-bateson-the-centennial">Gregory Bateson: The Centennial</a>,
+            <i class="magazine">Edge</i>, 19.11.2004.
+          </li>
+          <li>
+            <a href="http://www.anecologyofmind.com">An Ecology of Mind: A Daughter's Portrait of Gregory Bateson</a>
+            (film portrait of Gregory Bateson; see <a href="https://www.youtube.com/watch?v=vnL0ZB1SzZY">film clip by Bullfrog Films</a>).
+          </li>
+          <li lang="de">Lutterer, Wolfram: 
+            <i class="booktitle">Gregory Bateson: Eine Einführung in sein Denken</i>. 
+            Heidelberg: Carl-Auer-Systeme Verlag, 2002, 2., erweiterte Auflage, 2009. 
+            <a href="http://www.carl-auer.de/programm/artikel/titel/gregory-bateson-eine-einfuehrung-in-sein-denken/"><abbr>ISBN</abbr> 978-3-89670-717-8</a>.
+          </li>
+          <li>Charlton, Noel G.:
+            <i class="booktitle">Understanding Gregory Bateson: Mind, Beauty, and the Sacred Earth</i>.
+            <abbr>SUNY</abbr> series in Environmental Philosophy and Ethics.
+            <abbr>SUNY</abbr> Press, 2008.
+            <a href="http://www.sunypress.edu/p-4615-understanding-gregory-bateson.aspx"><abbr>ISBN</abbr> 978-0-7914-7452-5</a>.
+            <!-- @@read first chapter: http://www.sunypress.edu/pdf/61624.pdf -->
+          </li>
+          <li>Rieber, Robert W.:
+            <i class="booktitle">The Individual, Communication, and Society: Essays in Memory of Gregory Bateson</i>.
+            Studies in Emotion and Social Interaction.
+            Cambridge University Press, 2010. 
+            <a href="http://www.cambridge.org/de/academic/subjects/psychology/social-psychology/individual-communication-and-society-essays-memory-gregory-bateson?format=PB"><abbr>ISBN</abbr> 9780521134170</a>.
+            <!-- @@read excerpt: http://assets.cambridge.org/97805212/67410/excerpt/9780521267410_excerpt.pdf -->
+          </li>
+          <li>Harries-Jones, Peter:
+            <i class="booktitle">A Recursive Vision: Ecological Understanding and Gregory Bateson</i>.
+            University of Toronto Press, 1995.
+            <a href="http://www.utppublishing.com/A-Recursive-Vision-Ecological-Understanding-and-Gregory-Bateson.html"><abbr>ISBN</abbr> 9780802075918</a>.
+          </li>
+          <li>Sullivan, Gerald:
+            <i class="booktitle">Margaret Mead, Gregory Bateson, and Highland Bali: Fieldwork Photographs of Bayung Gede, 1936-1939</i>.
+            University of Chicago Press, 1999.
+            <a href="http://press.uchicago.edu/ucp/books/book/chicago/M/bo3632000.html"><abbr>ISBN</abbr> 9780226384344</a>.
+          </li>
+          <li>Hoffmeier, Jesper:
+            <i class="booktitle">A Legacy for Living Systems: Gregory Bateson as Precursor to Biosemiotics</i>.
+            Springer, 2008.
+            <a href="http://www.springer.com/us/book/9781402067051#otherversion=9789048177035"><abbr>ISBN</abbr> 978-90-481-7703-5</a>.
+          </li>
+          <li>Steier, Frederick:
+            <i class="booktitle">Gregory Bateson: Essays for an Ecology of Ideas</i>.
+            <a href="http://www.imprint.co.uk/product/chk/"><i class="journal">Cybernetics &amp; Human Knowing: A Journal of Second-Order Cybernetics, Autopoiesis and Cyber-Semiotics</i></a>, volume 12, Number 1-2 (2005).
+            Exeter: Imprint Academic, 2005.
+            <abbr>ISBN</abbr> 1-84540-032-1.
+            (See <a href="http://www.ingentaconnect.com/content/imp/chk/2005/00000012/f0020001">Ingenta Connect</a>.)
+          </li>
+        </ul>
+      </li>
+      <!-- Systems theory:
+        * Niklas Luhmann: Einführung in die Systemtheorie. Carl-Auer Verlag, 7. Aufl. 2017. ISBN 978-3-89670-839-7: http://www.carl-auer.de/programm/artikel/titel/einfuehrung-in-die-systemtheorie/
+        * Uwe Hoppe, Peter Fuchs: Systemtheoretisches Denken. Fragen an Prof. Dr. Fuchs (2 DVD, ca. 80 Min.) ISBN 978-3-89670-853-3: http://www.carl-auer.de/programm/artikel/titel/systemtheoretisches-denken-dvd/
+        * Fritz B. Simon: Einführung in die systemische Wirtschaftstheorie. Carl-Auer Verlag, 2009. ISBN 978-3-89670-678-2: http://www.carl-auer.de/programm/artikel/titel/einfuehrung-in-die-systemische-wirtschaftstheorie/
+      -->
       <li><span lang="de">Carl Friedrich von Weizsäcker</span> as philosopher.
         <br />See also
         <i class="booktitle" lang="de">Carl Friedrich von Weizsäcker</i> by 
@@ -1254,6 +1333,10 @@
         then adds he has a &dlquo;different approach to being responsible for the environment&rdquo; than
         citizens who are worried about pollution.
       </li>
+      <li>The Majority Report with Sam Seder:
+        <a href="https://www.youtube.com/watch?v=aOG24mXhKWY">Conservative Pundits Demand Bill Nye Stop Bullying Them on Climate Change</a>
+        (12 minutes, YouTube, 12.05.2014).
+      </li>
     </ul>
     <!-- Science Denial:
       * Climate change denial: https://en.wikipedia.org/wiki/Climate_change_denial 
@@ -1277,6 +1360,11 @@
       * Heinz Rölleke, Hrsg: Grimms Märchen, wie sie nicht im Buche stehen (insel taschenbuch), 1993. 
       * Hans-Jörg Uther: Handbuch zu den Kinder- und Hausmärchen der Brüder Grimm: Entstehung - Wirkung - Interpretation. De Gruyter, 2013.
       * Heinz Rölleke, Hrsg: Es war einmal: Die wahren Märchen der Brüder Grimm und wer sie ihnen erzählte. (480 S.) Eichborn, 2011.
+
+      The Americann Renaissance:
+      * F. O. Matthiessen: American Renaissance: Art and Expression in the Age of Emerson and Whitman. Oxford UP, 1941, 1968. ISBN: 9780195007596: https://global.oup.com/academic/product/american-renaissance-9780195007596?cc=de&lang=en& 
+      * https://en.wikipedia.org/wiki/F._O._Matthiessen 
+      * Dartmouth on edX: The American Renaissance: Literature of the 19th Century [2015]: https://www.youtube.com/watch?v=z68I2QF2HZ8 
     -->
   </main>
 
