Nerdwriter: The Death of Socrates.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1375,10 +1375,18 @@
       <li>
         <a href="https://www.philosophytalk.org/">Philosophy Talk</a>
         is the website of a radio program in which,
-        <q>[e]each week, our two host philosophers invite you to join them in conversation 
+        <q>[e]ach week, our two host philosophers invite you to join them in conversation 
         on a wide variety of issues ranging from popular culture to our most deeply-held beliefs 
         about science, morality, and the human condition</q>.
         <a href="https://twitter.com/philtalkradio">@philtalkradio</a> is their Twitter account.
+      </li>
+      <li>Nerdwriter:
+        <a href="https://www.youtube.com/watch?v=rKhfFBbVtFg">The Death of Socrates: How To Read A Painting</a>:
+        a YouTube video about the painting 
+        <a href="https://en.wikipedia.org/wiki/The_Death_of_Socrates" hreflang="en" lang="fr">La Mort de Socrate</a>
+        (1787) by the French painter
+        <a href="https://en.wikipedia.org/wiki/Jacques-Louis_David" hreflang="en" lang="fr">Jacques-Louis David</a>
+        (1748-1825).
       </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
