--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -764,6 +764,10 @@
         <a href="https://www.youtube.com/watch?v=Smd-q44ysoM">Raphael, School of Athens</a>
         (11 minutes, YouTube, 27.07.2014).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=w6DDMwsyQaA">Raphael, Portrait of Pope Julius II</a>
+        (4 minutes, YouTube, 18.12.2010).
+      </li>
       <li>Nerdwriter:
         <a href="https://www.youtube.com/watch?v=rKhfFBbVtFg">The Death of Socrates: How To Read A Painting</a>:
         a YouTube video about the painting 
@@ -773,8 +777,35 @@
         (1748-1825).
       </li>
       <li>
-        <a href="https://en.wikipedia.org/wiki/War_of_the_League_of_Cambrai#Holy_League">Holy League 1511</a>.
+        <a href="https://en.wikipedia.org/wiki/War_of_the_League_of_Cambrai#Holy_League">Holy League 1511</a>
+        (Wikipedia).
       </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/1511_in_art">1511 in art</a>
+        and
+        <a href="https://en.wikipedia.org/wiki/Category:1511">Category:1511</a>
+        (Wikipedia).
+      </li>
+      <li>Other people active at the time:
+        <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci">Leonardo</a> (1452&ndash;1591),
+        <a href="https://en.wikipedia.org/wiki/Albrecht_D%C3%BCrer" lang="de">Albrecht Dürer</a> (1471&ndash;1528)
+        (Dürer's <a href="https://en.wikipedia.org/wiki/Adoration_of_the_Trinity">Adoration of the Trinity</a> was painted in 1511),
+        <a href="https://en.wikipedia.org/wiki/Erasmus">Erasmus</a> (1466&ndash;1536)
+        (<a href="https://en.wikipedia.org/wiki/The_Praise_of_Folly">The Praise of Folly</a> was printed in 1511),
+        <a href="https://en.wikipedia.org/wiki/Thomas_More">Thomas More</a> (1478&ndash;1535),
+        <a href="https://en.wikipedia.org/wiki/Fran%C3%A7ois_Rabelais" lang="fr">François Rabelais</a> (between 1483 and 1494&ndash;1553).
+      </li>
+      <!-- 
+        * Siege of Vienna during Austrian–Hungarian War in 1485: https://en.wikipedia.org/wiki/Siege_of_Vienna_(1485) 
+        * Vasili III Ivanovich (1479-1533): Grand Prince of Moscow: Coronation 1502, reign 1505-1533.
+        * Cathedral of the Archangel in Moscow constructed between 1505 and 1508: https://en.wikipedia.org/wiki/Cathedral_of_the_Archangel 
+        * By 1510, Selim I had "conquered the whole of Iran and Azerbaijan, southern Dagestan (with its important city of Derbent), Mesopotamia, Armenia, Khorasan, Eastern Anatolia": https://en.wikipedia.org/wiki/Selim_I#Safavid_Empire
+        * April-July 1511: Şahkulu rebellion against the Ottoman Empire: https://en.wikipedia.org/wiki/%C5%9Eahkulu_rebellion 
+        * Safavid Empire also known as one of the "gunpowder empires": https://en.wikipedia.org/wiki/Gunpowder_Empires#Safavid_Empire 
+        * Ottoman Siege of Vienna, 1529: https://en.wikipedia.org/wiki/Siege_of_Vienna 
+        * House of Medici, 16th century: https://en.wikipedia.org/wiki/House_of_Medici#16th_century 
+        * 1517: Martin Luther: Ninety-five Theses: https://en.wikipedia.org/wiki/Ninety-five_Theses 
+      -->
     </ul>
 
     <h4>The Scottish Enlightenment</h4>
