Parkin: Cog Psy; Gress:
Alan Parkin: Essential Cognitive Psychology. David Gress: From Plato to
NATO.

--- a/lijst.html
+++ b/lijst.html
@@ -61,6 +61,10 @@
       Beacon Press, 2001.
       <a href="http://www.beacon.org/The-Great-Transformation-P46.aspx"><abbr>ISBN</abbr> 978-080705643-1</a>.
     </li>
+    <li>Parkin, Alan J.: <i class="booktitle">Essential Cognitive Psychology</i>. 
+      [2001] Routlege, 2014.
+      <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.
+    </li>
     <li>Weston, Anthony: <i class="booktitle">A Rulebook for Arguments</i>.
       4th edition. Hackett Publishing, 2008.
       <a href="https://www.hackettpublishing.com/a-rulebook-for-arguments"><abbr>ISBN</abbr> 978-0-87220-954-1</a>. (? 12 €)
@@ -74,13 +78,20 @@
       <a href="http://www.penguinrandomhouse.com/books/321570/john-maynard-keynes-by-robert-skidelsky/"><abbr>ISBN</abbr> 9780143036159</a>.
     </li>
     <li>Varoufakis, Yanis: <i class="booktitle">The Global Minotaur</i>.
-      Zed Books, 2011. 2nd edition, 2015.
-      <!-- <abbr>ISBN</abbr> -->
+      Zed Books, 2011. 3nd edition, 2015.
+      <a href="https://www.zedbooks.net/shop/book/the-global-minotaur/"><abbr>ISBN</abbr> 9781783606108</a>.
     </li>
-    <li>Perkins, John: <i class="booktitle">Confessions of an Economic Hit Man</i>. 
-      2004.
-      <!-- <abbr>ISBN</abbr> -->
-    </li>
+    <!-- 
+      * ! Christian Felber: Change Everything: Creating an Economy for the Common Good. Zed Books: https://www.zedbooks.net/shop/book/change-everything/ 
+      * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/ 
+      * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
+      * Eric Hazan and Kamo: First Measures of the Coming Insurrection. Zed Books: https://www.zedbooks.net/shop/book/first-measures-of-the-coming-insurrection/ 
+      * Aidan Ricketts: The Activists' Handbook: A Step-by-Step Guide to Participatory Democracy. Zed Books: https://www.zedbooks.net/shop/book/the-activists-handbook/ 
+      * Anna Feigenbaum, Fabian Frenzel, and Patrick McCurdy: Protest Camps. Zed Books: https://www.zedbooks.net/shop/book/protest-camps/ 
+      * William Blum: America's Deadliest Export: Democracy – The Truth about US Foreign Policy and Everything Else. Zed Books: https://www.zedbooks.net/shop/book/americas-deadliest-export/
+        [possible follow up to Naomi Klein's "The Shock Doctrine"]
+      * Roger Burbach, Michael Fox, and Federico Fuentes: Latin America's Turbulent Transitions: The Future of Twenty-First Century Socialism. Zed Books: https://www.zedbooks.net/shop/book/latin-americas-turbulent-transitions/ 
+    -->
     <li lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
       Flammarion, 2017.
       <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=50454&levelCode=home"><abbr>ISBN</abbr> 9782081395602</a>.
@@ -192,6 +203,15 @@
       <abbr>ISBN</abbr> 
     </li>
     -->
+    <li>Gress, David: <i class="booktitle">From Plato to <abbr>NATO</abbr></i>. 
+      Free Press, 1998, 2004. (624 pages)
+      <a href="http://www.simonandschuster.com/books/From-Plato-to-NATO/David-Gress/9780743264884"><abbr>ISBN</abbr> 9780743264884</a>.
+      <!-- 
+        * https://www.kirkusreviews.com/book-reviews/david-gress/from-plato-to-nato/ 
+        * Steven Alan Samson: "David Gress: From Plato to NATO Study Guide": http://digitalcommons.liberty.edu/cgi/viewcontent.cgi?article=1093&context=gov_fac_pubs
+        * Kwame Anthony Appiah: "There is no such thing as western civilisation", The Guardian, 9 November 2016: https://www.theguardian.com/world/2016/nov/09/western-civilisation-appiah-reith-lecture
+      -->
+    </li>
     <li>Hobbes, Thomas: <i class="booktitle">Leviathan. With selected variants from the Latin edition of 1668</i>.
       Edited, with Introduction, by Edwin Curley. Hackett Publishing, 1994. (627 pages)
       <a href="https://www.hackettpublishing.com/leviathan"><abbr>ISBN</abbr> 978-0-87220-177-4</a>.
