Bauer: Programming Smalltalk (2015).

--- a/lijst.html
+++ b/lijst.html
@@ -229,6 +229,11 @@
       Modern Library, 1999.
       <a href="http://www.penguinrandomhouse.com/books/106036/confessions-of-a-philosopher-by-bryan-magee/"><abbr>ISBN</abbr> 978-03 75 75 03 66</a>. (? 18 €)
     </li>
+    <li>Bauer, Johannes: <i class="booktitle">Programming Smalltalk – Object-Orientation from the Beginning</i>.
+      Springer, 2015. 
+      <a href="http://www.springer.com/us/book/9783658068226"><abbr>ISBN</abbr> 978-3-658-06822-6</a>.
+      <!-- @@sample pages on SpringerLink -->
+    </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
