--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -9,6 +9,8 @@
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
   <link rel="alternate stylesheet" type="text/css" media="print" href="../css/print.css" title="Printer-friendly version" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Stylesheet" />
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="googlebot" content="noindex, nofollow" />
 </head>
 <body class="philsciencepage">
   <header>
