--- a/humanities/index.html
+++ b/humanities/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Stylesheet" />
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="googlebot" content="noindex, nofollow" />
 </head>
 <body class="philosophypage">
   <header>
